[gd_scene load_steps=6 format=3 uid="uid://droixhbemd0xd"]

[ext_resource type="Script" uid="uid://dkyvojm86n535" path="res://source/states/Editors/CharacterEditor/CharacterEditor.gd" id="1_qbwox"]
[ext_resource type="Script" uid="uid://cdw8oloedo54f" path="res://source/states/Editors/CharacterEditor/Marker.gd" id="2_6y1bd"]
[ext_resource type="PackedScene" uid="uid://b1a3jlb7iu130" path="res://scenes/objects/ButtonRange.tscn" id="3_atq18"]
[ext_resource type="StyleBox" uid="uid://go6q2nvp2mu1" path="res://source/general/FoldableContent/FoldableStyleBox.tres" id="3_fjx64"]
[ext_resource type="Script" uid="uid://cvvli26q7wviq" path="res://source/general/popup/PopupDir.gd" id="4_6y1bd"]

[node name="Character Editor" type="Node"]
script = ExtResource("1_qbwox")

[node name="BG_Image" type="Sprite2D" parent="."]
modulate = Color(0.270222, 0.270222, 0.270222, 1)
texture_filter = 3
texture_repeat = 1
centered = false

[node name="BG" type="Node2D" parent="."]
texture_filter = 2
position = Vector2(-443, 0)
scale = Vector2(0.8, 0.8)

[node name="Marker_Origin" type="Node2D" parent="BG"]
z_index = 1
position = Vector2(611.25, 5.00002)
script = ExtResource("2_6y1bd")
v_color = Color(0, 1, 0, 1)
h_color = Color(1, 0, 0, 1)

[node name="Marker_Camera" type="Node2D" parent="BG"]
z_index = 1
position = Vector2(557.5, 5)
script = ExtResource("2_6y1bd")

[node name="Ground" type="Sprite2D" parent="BG"]
position = Vector2(-600, -850)
scale = Vector2(2.5, 2.5)
centered = false

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 667.0
offset_top = 269.0
offset_right = 1280.0
offset_bottom = 721.0
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0
tab_focus_mode = 0

[node name="Animation Data" type="ScrollContainer" parent="TabContainer"]
layout_mode = 2
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
metadata/_tab_index = 0

[node name="Container" type="VBoxContainer" parent="TabContainer/Animation Data"]
self_modulate = Color(0.29219002, 0.29219005, 0.29219002, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Current Animation" type="FoldableContainer" parent="TabContainer/Animation Data/Container"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("3_fjx64")
title = "Current Animation Data"

[node name="Data" type="Label" parent="TabContainer/Animation Data/Container/Current Animation"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
text = "
 Add Animation:

 Current Animation:

 Asset:
               
         
 Prefix:


 Indices: "

[node name="AnimationList" type="MenuButton" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 179.0
offset_top = 50.0
offset_right = 287.0
offset_bottom = 74.0
flat = false

[node name="Insert Animation Name" type="LineEdit" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 140.0
offset_top = 10.0
offset_right = 293.0
offset_bottom = 41.0
focus_mode = 1
mouse_force_pass_scroll_events = false
placeholder_text = "Animation Name"

[node name="Add Animation" type="Button" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 301.0
offset_top = 9.0
offset_right = 431.0
offset_bottom = 40.0
focus_mode = 0
text = "Add Animation"

[node name="Remove Animation" type="Button" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 440.0
offset_top = 11.0
offset_right = 598.0
offset_bottom = 42.0
focus_mode = 0
text = "Remove Animation"

[node name="AssetPath" type="LineEdit" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 70.0
offset_top = 83.0
offset_right = 269.0
offset_bottom = 114.0

[node name="Prefix" type="LineEdit" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 78.0
offset_top = 132.0
offset_right = 289.0
offset_bottom = 163.0
focus_mode = 1
clear_button_enabled = true
draw_control_chars = true

[node name="PrefixList" type="MenuButton" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 301.0
offset_top = 131.0
offset_right = 413.0
offset_bottom = 162.0
text = "Prefix List"
flat = false

[node name="Indices" type="LineEdit" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 91.0
offset_top = 192.0
offset_right = 299.0
offset_bottom = 223.0
focus_mode = 1
mouse_filter = 1
mouse_force_pass_scroll_events = false
clear_button_enabled = true
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Looped" type="CheckBox" parent="TabContainer/Animation Data/Container/Current Animation/Data"]
layout_mode = 0
offset_left = 292.0
offset_top = 256.0
offset_right = 378.0
offset_bottom = 287.0
focus_mode = 0
text = "Loop"

[node name="LoopFrom" parent="TabContainer/Animation Data/Container/Current Animation/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 261.0
offset_right = 104.0
offset_bottom = 276.0
text = "Loop From:"
int_value = true

[node name="anim_offset_x" parent="TabContainer/Animation Data/Container/Current Animation/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 11.0
offset_top = 317.0
offset_right = 96.0
offset_bottom = 332.0
text = "Offset X:"

[node name="anim_offset_y" parent="TabContainer/Animation Data/Container/Current Animation/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 302.0
offset_top = 315.0
offset_right = 387.0
offset_bottom = 330.0
text = "Offset Y:"

[node name="FrameRate" parent="TabContainer/Animation Data/Container/Current Animation/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 322.0
offset_top = 217.0
offset_right = 360.0
offset_bottom = 232.0
text = "FPS:"
value = 24.0

[node name="Offsets" type="FoldableContainer" parent="TabContainer/Animation Data/Container"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("3_fjx64")
folded = true
title = "Offsets"

[node name="Data" type="Control" parent="TabContainer/Animation Data/Container/Offsets"]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Offset Follow Flip" type="CheckBox" parent="TabContainer/Animation Data/Container/Offsets/Data"]
layout_mode = 0
offset_left = 2.0
offset_right = 209.0
offset_bottom = 31.0
tooltip_text = "If the character is flipped, the offset will be inverted."
focus_mode = 0
text = "Offset follows flip"

[node name="Offset Follow Scale" type="CheckBox" parent="TabContainer/Animation Data/Container/Offsets/Data"]
layout_mode = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 143.0
offset_bottom = 61.0
tooltip_text = "The animation offset will follow the character's scale."
focus_mode = 0
text = "Follow Scale"

[node name="Sing_Dance" type="FoldableContainer" parent="TabContainer/Animation Data/Container"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("3_fjx64")
folded = true
title = "Dance Properties"

[node name="Data" type="Control" parent="TabContainer/Animation Data/Container/Sing_Dance"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Sing Animation Follow Flip" type="CheckBox" parent="TabContainer/Animation Data/Container/Sing_Dance/Data"]
layout_mode = 0
offset_left = 4.0
offset_top = 67.0
offset_right = 276.0
offset_bottom = 98.0
tooltip_text = "If the character is flipped horizontally, \"singLEFT\" and \"singRIGHT\" animation will be reversed."
focus_mode = 0
text = "Sing Animation Follow Flip"

[node name="DanceAfterHold" type="CheckBox" parent="TabContainer/Animation Data/Container/Sing_Dance/Data"]
layout_mode = 0
offset_left = 4.0
offset_top = 9.0
offset_right = 182.0
offset_bottom = 33.0
tooltip_text = "Makes the character automatically return to dancing after holding a note, with the return time varying based on the songâ€™s duration and speed."
text = "Dance after hold"

[node name="DAnceWhenEnd" type="CheckBox" parent="TabContainer/Animation Data/Container/Sing_Dance/Data"]
layout_mode = 0
offset_left = 4.0
offset_top = 38.0
offset_right = 182.0
offset_bottom = 62.0
tooltip_text = "Character backs to dance when his sing animation ends."
text = "Dance when end"

[node name="Json Data" type="ScrollContainer" parent="TabContainer"]
visible = false
self_modulate = Color(1, 1, 1, 0.0705882)
layout_mode = 2
metadata/_tab_index = 1

[node name="Container" type="VBoxContainer" parent="TabContainer/Json Data"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Image" type="FoldableContainer" parent="TabContainer/Json Data/Container"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("3_fjx64")
folded = true
title = "Image"

[node name="Data" type="Label" parent="TabContainer/Json Data/Container/Image"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "
Image File:"

[node name="scale" parent="TabContainer/Json Data/Container/Image/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 3.0
offset_top = 69.0
offset_right = 60.0
offset_bottom = 84.0
text = "Scale:"
value = 1.0
step = 0.1

[node name="antialiasing" type="CheckBox" parent="TabContainer/Json Data/Container/Image/Data"]
layout_mode = 0
offset_left = 364.0
offset_top = 65.0
offset_right = 505.0
offset_bottom = 89.0
focus_mode = 0
button_pressed = true
text = "Antialiasing"

[node name="FlipX" type="CheckBox" parent="TabContainer/Json Data/Container/Image/Data"]
layout_mode = 0
offset_left = 264.0
offset_top = 63.0
offset_right = 349.0
offset_bottom = 87.0
focus_mode = 0
text = "Flip X"

[node name="image_file" type="LineEdit" parent="TabContainer/Json Data/Container/Image/Data"]
layout_mode = 0
offset_left = 104.0
offset_top = 12.0
offset_right = 421.0
offset_bottom = 42.0

[node name="Load Image" type="Button" parent="TabContainer/Json Data/Container/Image/Data"]
layout_mode = 0
offset_left = 433.0
offset_top = 14.0
offset_right = 535.0
offset_bottom = 37.0
focus_mode = 0
text = "Load Image"

[node name="Offstes" type="FoldableContainer" parent="TabContainer/Json Data/Container"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("3_fjx64")
folded = true
title = "Offsets"

[node name="Data" type="Label" parent="TabContainer/Json Data/Container/Offstes"]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
text = "
Position Array:         Camera Position:     Origin Offset:"

[node name="position_x" parent="TabContainer/Json Data/Container/Offstes/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 1.0
offset_top = 46.0
offset_right = 20.0
offset_bottom = 61.0
text = "x:"

[node name="position_y" parent="TabContainer/Json Data/Container/Offstes/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = -1.0
offset_top = 90.0
offset_right = 18.0
offset_bottom = 105.0
text = "y:"

[node name="Camera X" parent="TabContainer/Json Data/Container/Offstes/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 225.0
offset_top = 49.0
offset_right = 226.0
offset_bottom = 64.0

[node name="Camera Y" parent="TabContainer/Json Data/Container/Offstes/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 224.0
offset_top = 93.0
offset_right = 225.0
offset_bottom = 108.0

[node name="Origin X" parent="TabContainer/Json Data/Container/Offstes/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 424.0
offset_top = 49.0
offset_right = 425.0
offset_bottom = 64.0

[node name="Origin Y" parent="TabContainer/Json Data/Container/Offstes/Data" instance=ExtResource("3_atq18")]
layout_mode = 0
anchors_preset = 0
anchor_bottom = 0.0
offset_left = 424.0
offset_top = 93.0
offset_right = 425.0
offset_bottom = 108.0

[node name="HealthBar" type="FoldableContainer" parent="TabContainer/Json Data/Container"]
layout_mode = 2
focus_mode = 0
theme_override_styles/panel = ExtResource("3_fjx64")
title = "Health Bar"

[node name="HealthBar" type="Label" parent="TabContainer/Json Data/Container/HealthBar"]
layout_mode = 2
text = "
Color:             Icon:


"

[node name="HealthColor" type="ColorPickerButton" parent="TabContainer/Json Data/Container/HealthBar/HealthBar"]
layout_mode = 0
offset_left = 57.0
offset_top = 11.0
offset_right = 168.0
offset_bottom = 43.0
text = "Color:"

[node name="HealthIcon" type="LineEdit" parent="TabContainer/Json Data/Container/HealthBar/HealthBar"]
layout_mode = 0
offset_left = 229.0
offset_top = 11.0
offset_right = 395.0
offset_bottom = 42.0
focus_mode = 1
keep_editing_on_text_submit = true
drag_and_drop_selection_enabled = false

[node name="isPixelIcon" type="CheckBox" parent="TabContainer/Json Data/Container/HealthBar/HealthBar"]
layout_mode = 0
offset_left = 126.0
offset_top = 47.0
offset_right = 276.0
offset_bottom = 71.0
focus_mode = 0
text = "is Pixel Icon"

[node name="scaleIcon" type="CheckBox" parent="TabContainer/Json Data/Container/HealthBar/HealthBar"]
layout_mode = 0
offset_left = -1.0
offset_top = 47.0
offset_right = 121.0
offset_bottom = 71.0
focus_mode = 0
text = "Scale Icon"

[node name="CharacterData" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.541176)
offset_left = 762.0
offset_top = -3.0
offset_right = 1280.0
offset_bottom = 218.0

[node name="Label" type="Label" parent="CharacterData"]
layout_mode = 0
offset_top = 17.0
offset_right = 150.0
offset_bottom = 219.0
text = "Character:


Animation Ghost:"

[node name="Save Character" type="Button" parent="CharacterData"]
layout_mode = 0
offset_left = 150.0
offset_top = 115.0
offset_right = 292.0
offset_bottom = 146.0
focus_mode = 1
text = "Save Character"

[node name="Reload Character" type="Button" parent="CharacterData"]
layout_mode = 0
offset_left = 301.0
offset_top = 115.0
offset_right = 459.0
offset_bottom = 146.0
focus_mode = 1
text = "Reload Character"

[node name="New Character" type="Button" parent="CharacterData"]
layout_mode = 0
offset_left = 2.0
offset_top = 115.0
offset_right = 143.0
offset_bottom = 146.0
focus_mode = 1
text = "New Character"

[node name="Load Character From File" type="Button" parent="CharacterData"]
layout_mode = 0
offset_left = 262.0
offset_top = 9.0
offset_right = 402.0
offset_bottom = 40.0
focus_mode = 0
text = "Load from File"

[node name="Playable Character" type="CheckBox" parent="CharacterData"]
layout_mode = 0
offset_left = -4.0
offset_top = 152.0
offset_right = 221.0
offset_bottom = 183.0
focus_mode = 0
button_pressed = true
text = "As Playable Character"

[node name="GF Character" type="CheckBox" parent="CharacterData"]
layout_mode = 0
offset_left = 231.0
offset_top = 153.0
offset_right = 456.0
offset_bottom = 184.0
focus_mode = 0
button_pressed = true
text = "Is GF Character"

[node name="AnimationGhost" type="MenuButton" parent="CharacterData"]
layout_mode = 0
offset_left = 154.0
offset_top = 63.0
offset_right = 296.0
offset_bottom = 94.0
focus_mode = 1
flat = false

[node name="New Character Tab" type="ColorRect" parent="CharacterData"]
visible = false
layout_mode = 0
offset_left = -762.0
offset_top = 3.0
offset_right = 518.0
offset_bottom = 724.0
color = Color(0, 0, 0, 0.34902)

[node name="Panel" type="Panel" parent="CharacterData/New Character Tab"]
layout_mode = 0
offset_left = 441.0
offset_top = 237.0
offset_right = 829.0
offset_bottom = 485.0

[node name="Label" type="Label" parent="CharacterData/New Character Tab/Panel"]
layout_mode = 0
offset_top = 3.0
offset_right = 383.0
offset_bottom = 248.0
text = "               New Character


Character Name:

Animation Type:

Image:"

[node name="CharacterName" type="LineEdit" parent="CharacterData/New Character Tab/Panel"]
layout_mode = 0
offset_left = 139.0
offset_top = 50.0
offset_right = 275.0
offset_bottom = 73.0
text = "bf"

[node name="AnimationType" type="MenuButton" parent="CharacterData/New Character Tab/Panel"]
layout_mode = 0
offset_left = 140.0
offset_top = 89.0
offset_right = 266.0
offset_bottom = 112.0
text = "Sparrow"
flat = false
item_count = 2
popup/item_0/text = "Sparrow"
popup/item_0/id = 0
popup/item_1/text = "Sprite Map"
popup/item_1/id = 1

[node name="Image" type="LineEdit" parent="CharacterData/New Character Tab/Panel"]
layout_mode = 0
offset_left = 56.0
offset_top = 125.0
offset_right = 214.0
offset_bottom = 148.0

[node name="Select New Character Image From File" type="Button" parent="CharacterData/New Character Tab/Panel/Image"]
layout_mode = 0
offset_left = 162.0
offset_top = -1.0
offset_right = 320.0
offset_bottom = 22.0
focus_mode = 0
text = "Select From File"

[node name="CreateNewCharacter" type="Button" parent="CharacterData/New Character Tab/Panel"]
layout_mode = 0
offset_left = 158.0
offset_top = 202.0
offset_right = 223.0
offset_bottom = 225.0
text = "Create"

[node name="CharacterList" type="MenuButton" parent="CharacterData"]
layout_mode = 0
offset_left = 94.0
offset_top = 9.0
offset_right = 254.0
offset_bottom = 38.0
focus_mode = 1
flat = false
script = ExtResource("4_6y1bd")
dir_to_look = "characters"
metadata/_custom_type_script = "uid://cvvli26q7wviq"

[connection signal="text_submitted" from="TabContainer/Animation Data/Container/Current Animation/Data/Insert Animation Name" to="TabContainer/Animation Data/Container/Current Animation/Data/Insert Animation Name" method="release_focus"]
[connection signal="button_up" from="TabContainer/Animation Data/Container/Current Animation/Data/Add Animation" to="." method="_on_add_animation_button_up"]
[connection signal="button_up" from="TabContainer/Animation Data/Container/Current Animation/Data/Remove Animation" to="." method="_on_remove_animation_button_up"]
[connection signal="text_submitted" from="TabContainer/Animation Data/Container/Current Animation/Data/AssetPath" to="." method="_on_asset_path_text_submitted"]
[connection signal="text_submitted" from="TabContainer/Animation Data/Container/Current Animation/Data/Prefix" to="." method="reloadCharacterAnim" unbinds=1]
[connection signal="text_submitted" from="TabContainer/Animation Data/Container/Current Animation/Data/Prefix" to="." method="set_anim_data_value" binds= [&"prefix"]]
[connection signal="text_submitted" from="TabContainer/Animation Data/Container/Current Animation/Data/Indices" to="." method="_on_indices_text_submitted"]
[connection signal="toggled" from="TabContainer/Animation Data/Container/Current Animation/Data/Looped" to="." method="replayCharAnim" unbinds=1]
[connection signal="toggled" from="TabContainer/Animation Data/Container/Current Animation/Data/Looped" to="." method="set_anim_data_value" binds= [&"looped"]]
[connection signal="toggled" from="TabContainer/Animation Data/Container/Current Animation/Data/Looped" to="." method="set_character_animation_value" binds= [&"looped"]]
[connection signal="value_changed" from="TabContainer/Animation Data/Container/Current Animation/Data/LoopFrom" to="." method="_on_loop_from_value_changed"]
[connection signal="value_changed" from="TabContainer/Animation Data/Container/Current Animation/Data/anim_offset_x" to="." method="_on_anim_offset_x_value_changed"]
[connection signal="value_changed" from="TabContainer/Animation Data/Container/Current Animation/Data/anim_offset_y" to="." method="_on_anim_offset_y_value_changed"]
[connection signal="value_changed" from="TabContainer/Animation Data/Container/Current Animation/Data/FrameRate" to="." method="set_anim_data_value" binds= [&"fps"]]
[connection signal="value_changed" from="TabContainer/Animation Data/Container/Current Animation/Data/FrameRate" to="." method="set_character_animation_value" binds= [&"frameRate"]]
[connection signal="toggled" from="TabContainer/Animation Data/Container/Offsets/Data/Offset Follow Flip" to="." method="_on_offset_follow_flip_toggled"]
[connection signal="toggled" from="TabContainer/Animation Data/Container/Offsets/Data/Offset Follow Scale" to="." method="_on_offset_follow_scale_toggled"]
[connection signal="toggled" from="TabContainer/Animation Data/Container/Sing_Dance/Data/Sing Animation Follow Flip" to="." method="_on_flip_sing_direction_toggled"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Image/Data/scale" to="." method="_on_scale_value_changed"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Image/Data/scale" to="." method="set_json_value" binds= ["scale"]]
[connection signal="toggled" from="TabContainer/Json Data/Container/Image/Data/antialiasing" to="." method="_on_antialiasing_toggled"]
[connection signal="toggled" from="TabContainer/Json Data/Container/Image/Data/FlipX" to="." method="_on_flip_x_toggled"]
[connection signal="text_submitted" from="TabContainer/Json Data/Container/Image/Data/image_file" to="." method="setCharacterImage"]
[connection signal="button_down" from="TabContainer/Json Data/Container/Image/Data/Load Image" to="." method="_on_load_image_button_down"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Offstes/Data/position_x" to="." method="_on_position_x_value_changed"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Offstes/Data/position_y" to="." method="_on_position_y_value_changed"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Offstes/Data/Camera X" to="." method="_on_camera_x_value_changed"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Offstes/Data/Camera Y" to="." method="_on_camera_y_value_changed"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Offstes/Data/Origin X" to="." method="_on_origin_x_value_changed"]
[connection signal="value_changed" from="TabContainer/Json Data/Container/Offstes/Data/Origin Y" to="." method="_on_origin_y_value_changed"]
[connection signal="color_changed" from="TabContainer/Json Data/Container/HealthBar/HealthBar/HealthColor" to="." method="_on_health_color_color_changed"]
[connection signal="text_submitted" from="TabContainer/Json Data/Container/HealthBar/HealthBar/HealthIcon" to="." method="_on_health_icon_text_submitted"]
[connection signal="toggled" from="TabContainer/Json Data/Container/HealthBar/HealthBar/isPixelIcon" to="." method="_on_is_pixel_icon_toggled"]
[connection signal="toggled" from="TabContainer/Json Data/Container/HealthBar/HealthBar/scaleIcon" to="." method="_on_scale_icon_toggled"]
[connection signal="button_up" from="CharacterData/Save Character" to="." method="_on_save_character_button_up"]
[connection signal="button_up" from="CharacterData/Reload Character" to="." method="_on_reload_character_button_up"]
[connection signal="button_down" from="CharacterData/New Character" to="CharacterData/New Character Tab" method="show"]
[connection signal="button_up" from="CharacterData/Load Character From File" to="." method="_on_load_character_from_file_button_up"]
[connection signal="toggled" from="CharacterData/Playable Character" to="." method="updateCameraPosition" flags=3 unbinds=1]
[connection signal="toggled" from="CharacterData/Playable Character" to="." method="replayCharAnim" flags=3 unbinds=1]
[connection signal="toggled" from="CharacterData/Playable Character" to="." method="set_character_value" binds= [&"isPlayer"]]
[connection signal="toggled" from="CharacterData/GF Character" to="." method="updateCameraPosition" flags=3 unbinds=1]
[connection signal="toggled" from="CharacterData/GF Character" to="." method="set_character_value" binds= [&"isGF"]]
[connection signal="gui_input" from="CharacterData/New Character Tab" to="." method="_on_new_character_tab_gui_input"]
[connection signal="button_down" from="CharacterData/New Character Tab/Panel/Image/Select New Character Image From File" to="." method="_on_select_new_character_image_from_file_button_down"]
[connection signal="button_down" from="CharacterData/New Character Tab/Panel/CreateNewCharacter" to="." method="_on_create_new_character_button_down"]
